improve repository pattern